--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title>D3 Bar Chart</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1> D3 Bar Chart Practice</h1>
+<div id="visual">
+	<svg width="100%" height= "500px"></svg>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="script.js"></script>
+<script src="barChart.js"></script>
 </body>
 </html>
