updated data in chart

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1> D3 Bar Chart Practice</h1>
 <div id="visual">
-	<svg width="100%" height= "500px"></svg>
+	<svg width="100%" height= "80vh"></svg>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
