--- a/bar_chart/index.html
+++ b/bar_chart/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Form used for pie chart -->
 <div id="visual">
 	<svg width="100%" height= "80vh"></svg>
 </div>
